--- a/public/home.html
+++ b/public/home.html
@@ -19,8 +19,10 @@
                 <p class="lead">Mon parcours, complété par ma passion pour l'informatique, m'a permis
                     d'acquérir les
                     connaissances techniques et pratiques indispensables à l'exercice du métier de developpeur.
-                    Maîtrisant différents langages informatiques (Java, Java Script, C#, Python …), je serais enchanté de pouvoir 
-                    traviller à vos cotés et appliquer mes compétences au developpement de vos applications.</p>
+                    Maîtrisant différents langages informatiques (Java, Java Script, C#, Python …), je serais enchanté
+                    de pouvoir
+                    traviller à vos cotés et appliquer mes compétences au developpement de vos applications.
+                </p>
                 <p class="lead">
                     <a href="./cv.html" class="btn btn-lg btn-default">Découvrir</a>
                 </p>
