--- a/public/cv.html
+++ b/public/cv.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light fixed-top">
+    <nav class="navbar">
         <div class="col-md-2">
             <a class="navbar-brand" href="#formation">
                 Formation
